feat: move animation to a function that can be called onclick

--- a/index.html
+++ b/index.html
@@ -1,45 +1,51 @@
 <html>
-
 <head>
 	<title>Parcel Sandbox</title>
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" href="./src/styles.css" />
 </head>
-
 <body>
-	<div class="app">
+	<div class="background">
+		<div class="loader">
+			<div class="planet">
+				<div class="planetEclipse"></div>
+			</div>
+			<div class="ring inner"></div>
+			<div class="ring middle"></div>
+			<div class="ring outer"></div>
 			<div class="innerMoonA moonContainer">
-				<div class="moon"></div>
-				<div class="moonEclipse"></div>
+				<div class="moon">
+					<div class="moonEclipse"></div>
+				</div>
 			</div>
 			<div class="innerMoonB moonContainer">
-				<div class="moon"></div>
-				<div class="moonEclipse"></div>
+				<div class="moon">
+					<div class="moonEclipse"></div>
+				</div>
 			</div>
 			<div class="middleMoonA moonContainer">
-				<div class="moon"></div>
-				<div class="moonEclipse"></div>
+				<div class="moon">
+					<div class="moonEclipse"></div>
+				</div>
 			</div>
 			<div class="middleMoonB moonContainer">
-				<div class="moon"></div>
-				<div class="moonEclipse"></div>
+				<div class="moon">
+					<div class="moonEclipse"></div>
+				</div>
 			</div>
 			<div class="outerMoonA moonContainer">
-				<div class="moon"></div>
-				<div class="moonEclipse"></div>
+				<div class="moon">
+					<div class="moonEclipse"></div>
+				</div>
 			</div>
 			<div class="outerMoonB moonContainer">
-				<div class="moon"></div>
-				<div class="moonEclipse"></div>
+				<div class="moon">
+					<div class="moonEclipse"></div>
+				</div>
 			</div>
-		<div class="planetContainer">
-			<div class="planet"></div>
-			<div class="eclipse"></div>
 		</div>
-		<div class="ring inner"></div>
-		<div class="ring middle"></div>
-		<div class="ring outer"></div>
+		<button class="button">Eclipse</button>
 	</div>
 </body>
-
+<script src="src/index.ts"></script>
 </html>
